# git-timespent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  setup.cfg  timespent.py
