[metadata]
name = git_timespent
version = 0.0.1
description = Estimate worked hours per author in a git repository.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/giovannipcarvalho/git-timespent
author = Giovanni Carvalho
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = timespent
python_requires = >=3.6
